modified in index.htm amd main.js with DOM event input,select and textara

--- a/47th/index.html
+++ b/47th/index.html
@@ -11,9 +11,40 @@
 
 <body>
     <h2>DOM Event | Event Object | onchange event</h2>
-    <label for="name">Name:
-        <input type="text" id="name" name="name">
+    <!-- Input  -->
+    <!-- <label for="name">Name:
+        <input type="text" id="input_name" name="name" class="input_n">
+    </label> -->
+<!-- Input Type checkbox -->
+
+<!-- <div>
+    <h2>Programming Language</h2>
+    <label for="program">
+        <input type="checkbox" name="program" id="c" value="c"> C
     </label>
+    <label for="java">
+        <input type="checkbox" name="program" id="java" value="java"> java
+    </label>
+    <label for="python">
+        <input type="checkbox" name="program" id="python" value="python"> python
+    </label>
+</div> -->
+
+<!-- Select  -->
+<!-- <label for="department">Faculty</label>
+<select name="department" id="dpt">
+<option value="cse">CSE</option>
+<option value="eee">EEE</option>
+<option value="ete">ETE</option>
+<option value="it">IT</option>
+<option value="math">Math</option>
+
+</select> -->
+<!-- Teatarea -->
+<h2>Write your Message Here</h2>
+<textarea name="Message" id="para" class="msg" cols="30" rows="10"></textarea>
+
+
 
     <script src="main.js"></script>
 </body>
