mouse event added

--- a/50th/index.html
+++ b/50th/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,16 @@
     <title>Mouse Event</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h2>DOM Event | Mouse Event</h2>
 
-    
+    <div>
+        <p>This is a paragraph.</p>
+    </div>
+
+
     <script src="main.js"></script>
 </body>
+
 </html>
