--- a/50th/index.html
+++ b/50th/index.html
@@ -12,8 +12,13 @@
 <body>
     <h2>DOM Event | Mouse Event</h2>
 
-    <div>
-        <p>This is a paragraph.</p>
+    <div class="my_div" id="MyDiv">
+        <p class="para" id="PaRa">This is a paragraph.</p>
+        <p class="para" id="PaRa">This is a paragraph.</p>
+        
+        <button class="btn">btn1</button>
+        <button class="btn">btn2</button>
+        <button class="btn">btn3</button>
     </div>
 
 
