--- a/77th/index.html
+++ b/77th/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ES6 modules and class</title>
 </head>
+
 <body>
-    <h2>ES6 modules and class</h2>
+    <h2>ES6 modules: Export and Import</h2>
     <script src="main.js" type="module"></script>
 </body>
+
 </html>
