--- a/84th/index.html
+++ b/84th/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <h2> calling api from javascript | fetch api</h2>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="api.js"></script>
 </body>
 
 </html>
